# Piscine_Python

mod00/ex00/: Conda  answer.txt
mod00/ex01/: exec.py
mod00/ex02/: whois.py
mod00/ex03/: count.py
mod00/ex04/: operation.py
mod00/ex05/: kata00.py  kata01.py  kata02.py  kata03.py  kata04.py
mod00/ex06/: recipe.py
mod00/ex07/: filterwords.py
mod00/ex08/: sos.py
mod00/ex09/: guess.py
mod01/ex00/: book.py  recipe.py  test.py
mod01/ex01/: game.py
mod01/ex02/: test.py  vector.py
mod01/ex03/: generator.py
mod01/ex04/: eval.py
mod02/ex00/: ft_filter.py  ft_map.py  ft_reduce.py
mod02/ex01/: main.py
mod02/ex03/: csvreader.py  test.csv
mod02/ex04/: README.md  __init__.py  build.sh  pyproject.toml
mod02/ex04/my_minipack.egg-info/: SOURCES.txt
mod02/ex05/: TinyStatistician.py
mod02/ex_04_tuto/packaging_tutorial/: pyproject.toml
mod02/ex_04_tuto/packaging_tutorial/src/example_package_allan.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
mod03/ex00/: NumPyCreator.py
mod03/ex01/: ImageProcessor.py  test.py  wtf.py
mod03/ex02/: ScrapBooker.py  test.py
mod03/ex03/: ColorFilter.py  ImageProcessor.py  test.py
mod04/ex00/: FileLoader.py  data.csv  test.py
mod04/ex01/: FileLoader.py  YoungestFellah.py  test.py
mod04/ex02/: Go.py  ProportionBySport.py  test.py
mod04/ex05/: HowManyMedalsByCountry.py  test.py
mod04/ex06/: MyPLotLib.py  test.py
